src/objects/Degree__c.object
<CustomObject>
    <description>Records Degrees related to  Education</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status Code</description>
        <inlineHelpText>Status Code</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Major_Code__c</fullName>
        <label>Major Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>School_Code_Sub__c</fullName>
        <label>School Code Sub</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Code__c</fullName>
        <label>School Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_School_Code__c</fullName>
        <label>Web School Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Degree</label>
    <nameField>
        <label>Degree Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Degrees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>